--- a/homework/2020-10-08/index.html
+++ b/homework/2020-10-08/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button trying out</title>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <button type = "button" name = "button1" style = "width: 120px; height:45px;">
-        <b>My first button</b>
+    <button type = "button" class = "button1"><b>OK</b></button>
 </body>
 </html>
