--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github.io</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>08-10-2020</title>
 </head>
-<body>
-    Домашка по фронтенду
-</body>
+  <body>
+    <button>OK</button>
+    <button>OK</button>
+  </body>
 </html>
