--- a/classwork/2020-10-10/index.html
+++ b/classwork/2020-10-10/index.html
@@ -8,14 +8,7 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
   <body>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-        
-  </body>
+    <button>Yes</button>
+    <button>No</button>
+ </body>
 </html>
