--- a/classwork/2020-10-10/index.html
+++ b/classwork/2020-10-10/index.html
@@ -6,9 +6,16 @@
   <title>10-10-2020</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./images">
 </head>
   <body>
-    <button>Yes</button>
-    <button>No</button>
+    
+    <div class="div1">
+     <h1>dhdhdh</h1>
+     
+      <div class="div2">
+      <h1 style="font-size: 360px">dkdmekd</h1>
+      </div>
+    </div>
  </body>
 </html>
