--- a/homework/2020-10-11/index2.html
+++ b/homework/2020-10-11/index2.html
@@ -5,23 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>divs</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main2.css">
 </head>
 <body>
   <div>
-    Liverpool
+    <div></div>
+    <div></div>
   </div>
+  <br>
   <div>
-    Arsenal
+    <div></div>
+    <div></div>
   </div>
+  <br>
   <div>
-    Man United
+    <div></div>
+    <div></div>
   </div>
+  <br>
   <div>
-    Chelsea
+    <div></div>
+    <div></div>
   </div>
+  <br>
   <div>
-    Tottenham
+    <div></div>
+    <div></div>
   </div>
 </body>
 </html>
