--- a/homework/2020-10-11/index_hex.html
+++ b/homework/2020-10-11/index_hex.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>divs</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <link rel="stylesheet" href="./styles/main2.css">
+  <link rel="stylesheet" href="./styles/main_hex.css">
 </head>
 <body>
   <div>
