--- a/homework/2020-10-15/index.html
+++ b/homework/2020-10-15/index.html
@@ -9,19 +9,25 @@
 </head>
 <body>
   <div class="item1">Item 1
-    <div class="menu11"><a href="https://google.com">Menu 1</a></div>
-    <div class="menu12"><a href="https://youtube.com">Menu 1</a></div>
-    <div class="menu13"><a href="https://github.com">Menu 1</a></div>
+    <div class="menu1">
+    <a href="https://google.com">Menu 1</a>
+    <a href="https://youtube.com">Menu 1</a>
+    <a href="https://github.com">Menu 1</a>
+    </div>
   </div>  
   <div class="item2">Item 2
-    <div class="menu21"><a href="#">Menu 2</a></div>
-    <div class="menu22"><a href="#">Menu 2</a></div>
-    <div class="menu23"><a href="#">Menu 2</a></div>
-  </div>
+    <div class="menu2">
+    <a href="https://google.com">Menu 2</a>
+    <a href="https://youtube.com">Menu 2</a>
+    <a href="https://github.com">Menu 2</a>
+    </div>
+  </div>  
   <div class="item3">Item 3
-    <div class="menu31"><a href="#">Menu 3</a></div>
-    <div class="menu32"><a href="#">Menu 3</a></div>
-    <div class="menu33"><a href="#">Menu 3</a></div>
-  </div>
+    <div class="menu3">
+    <a href="https://google.com">Menu 3</a>
+    <a href="https://youtube.com">Menu 3</a>
+    <a href="https://github.com">Menu 3</a>
+    </div>
+  </div>  
 </body>
 </html>
