--- a/classwork/2020-10-17/index.html
+++ b/classwork/2020-10-17/index.html
@@ -8,30 +8,34 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <div class="main_container">
-    <div class="header_container">
-      <div class="image_container"></div>
-      <div class="menu_container"></div>
+    <div class="header">
+      <div class="image">logo</div>
+      <div class="menu">
         <div class="menu1"></div>
-        <div class="dropout_menu1"></div>
+        <div class="dropout1">
           <a></a>
           <a></a>
           <a></a>
           <a></a>
-        <div class="menu2">
-        <div class="dropout_menu2"></div>
+        </div>
+        <div class="menu2"></div>
+        <div class="dropout2">
           <a></a>
           <a></a>
           <a></a>
           <a></a>
+        </div>
         <div class="menu3"></div>
-        <div class="dropout_menu3"></div>
+        <div class="dropout3">
           <a></a>
           <a></a>
           <a></a>
           <a></a>
+        </div>
+      </div>
     </div>
-    <div class="content_container"></div>
-  </div>  
+    <div class="content">
+    </div>  
+    <div class="footer"></div> 
 </body>
 </html>
