--- a/homework/2020-10-19/index.html
+++ b/homework/2020-10-19/index.html
@@ -11,10 +11,10 @@
     <div class="main">
       <div class="clouds">
         <div class="cloud1">
-          <img src="./images/cloud1.png">
+          <img src="./images/Cloud1.png">
         </div>
         <div class="cloud2">
-          <img src="./images/cloud2.png">
+          <img src="./images/Cloud2.png">
         </div>
       </div>
       <div class="comingsoon">
