--- a/homework/2020-10-19/index.html
+++ b/homework/2020-10-19/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <div class="main">
+    <!-- <div class="main"> -->
       <div class="clouds">
         <div class="cloud1">
           <img src="./images/Cloud1.png">
@@ -18,18 +18,22 @@
         </div>
       </div>
       <div class="comingsoon">
-        <div>COMING SOON</div>
+        <div>COMING <span>SOON</span></div>
       </div>
       <div class="subscribe">
-        <div>SUBSCRIBE TO GET NOTIFIED ON UPDATES</div>
+        <div>SUBSCRIBE TO GET NOTIFIED ON UPDATES.</div>
       </div>
       <div class="form">
-        <div class="inputfield">
+        <form>
+          <input type="text" placeholder="Type your e-mail address">
+          <button type="submit">SUBSCRIBE</button>
+        </form>
+        <!-- <div class="inputfield">
           <div>Type your e-mail address</div>
         </div>
         <div class="button">
           <div>SUBSCRIBE</div>
-        </div>
+        </div> -->
       </div>
       <div class="footer">
         <div class="ship">
@@ -49,6 +53,6 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
 </body>
 </html>
