--- a/classwork/2020-10-19/index.html
+++ b/classwork/2020-10-19/index.html
@@ -3,11 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>divs</title>
+  <title>Coming Soon</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    
+      <div class="clouds">
+        <div class="cloud1">
+          <img src="./images/Cloud1.png">
+        </div>
+        <div class="cloud2">
+          <img src="./images/Cloud2.png">
+        </div>
+      </div>
+      <div class="comingsoon">
+        <div>COMING <span>SOON</span></div>
+      </div>
+      <div class="subscribe">
+        <div>SUBSCRIBE TO GET NOTIFIED ON UPDATES.</div>
+      </div>
+      <div class="form">
+        <form>
+          <input type="text" placeholder="Type your e-mail address">
+          <button type="submit">SUBSCRIBE</button>
+        </form>
+      </div>
+      <div class="footer">
+        <div class="ship">
+          <img src="./images/ship.png">
+        </div>
+        <div class="ice">
+          <div class="image">
+            <img src="./images/ice.png">
+          </div>  
+          <div class="numbers">
+            <div class="days">113</div>
+            <div class="word1">DAYS</div>
+            <div class="hours">09</div>
+            <div class="word2">HOURS</div>
+            <div class="mins">59</div>
+            <div class="word3">MINS</div>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
