--- a/homework/2020-10-19/index.html
+++ b/homework/2020-10-19/index.html
@@ -28,7 +28,7 @@
           <button type="submit">SUBSCRIBE</button>
         </form>
       </div>
-      <div class="footer">
+      <div class="content">
         <div class="ship">
           <img src="./images/ship.png">
         </div>
@@ -46,5 +46,6 @@
           </div>
         </div>
       </div>
+      <div class="footer"></div> 
 </body>
 </html>
