--- a/classwork/2020-10-24/index.html
+++ b/classwork/2020-10-24/index.html
@@ -8,19 +8,12 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <div class="main">
-    <div class="deck1">
-      <div class="card1"><p>card1</p></div>
+    <div class="header">
+      <div class="menu1">
+        <div class="info"><pre>2018-11-02    10:54               BITCOIN     CNY: 43713.95     EUR: 5553.60     GBP: 4877.79     USD: 6356.73</pre></div>
+        <div class="language"><pre>RU  |  EN  |  ZH</pre></div>
+      </div>
+      
     </div>
-    <div class="deck2">
-      <div class="card2"><p>card2</p></div>
-    </div>
-    <div class="deck3">
-      <div class="card3"><p>card3</p></div>
-    </div>
-    <div class="deck4">
-      <div class="card4"><p>card4</p></div>
-    </div>
-  </div>
 </body>
 </html>
