--- a/classwork/2020-10-24/index.html
+++ b/classwork/2020-10-24/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>divs</title>
+  <title>PPS на SIGMAPOOL</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <link rel="stylesheet" href="./styles/main.css">
 </head>
