--- a/classwork/2020-10-31/index.html
+++ b/classwork/2020-10-31/index.html
@@ -9,12 +9,18 @@
 </head>
 <body>
     <div class="main">
-        <div class="second"></div>
-        <div class="third"></div>
-        <div class="h150"></div>
-        <div class="w300"></div>
-        <div class="h50"></div>
-        <div class="null"></div>
+      <div id="countset" class="countdown">00:00:00</div>
+      <div class="timing">
+        <div class="timeset">
+          <form>
+            <input id="timeset" type="time" name="timeset" step="1">
+          </form>
+        </div>
+        <div class="start">
+          <button type="button"></button>
+          <div class="circle-icon2"></div>
+        </div>
+      </div>
     </div>
 </body>
 </html>
