--- a/homework/2020-11-05/index.html
+++ b/homework/2020-11-05/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="main">
     <div class="button">
-      <button>Animated</button>"
+      <button>Animated</button>
     </div>
     <div class="books">
       <div class="book book1"><h2>Article 1</h2><h3>Caption 1</h3></div>
