--- a/classwork/2020-11-07/index.html
+++ b/classwork/2020-11-07/index.html
@@ -12,8 +12,10 @@
       <div class="drop"></div>
     </div>
     <div class="frame">
-    <div class="frame1"></div>
-    <div class="frame2"></div>
+    <div class="frame1">
+      <div class="frame2"></div>
+    </div>
+    
   </div>
 </body>
 </html>
