--- a/homework/2020-11-09 - Copy/index.html
+++ b/homework/2020-11-09 - Copy/index.html
@@ -9,34 +9,34 @@
 </head>
 <body>
     <div class="wrapper">
-      <div class="row">
+     <!-- <div class="row">
        <div class="item"></div>
        <div class="item"></div>
        <div class="item"></div>
        <div class="item"></div>
        <div class="item"></div>
+     </div>
+     <div class="row">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
       </div>
       <div class="row">
        <div class="item"></div>
        <div class="item"></div>
        <div class="item"></div>
        <div class="item"></div>
-       <div class="item"></div>
+        <div class="item"></div>
       </div>
       <div class="row">
+        <div class="item"></div>
        <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-      </div>
-      <div class="row">
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-      </div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div> -->
     </div>
 </body>
 </html>
