--- a/homework/2020-11-09 - Copy/index.html
+++ b/homework/2020-11-09 - Copy/index.html
@@ -8,35 +8,127 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <div class="wrapper">
-     <!-- <div class="row">
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-     </div>
-     <div class="row">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      </div>
-      <div class="row">
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-       <div class="item"></div>
-        <div class="item"></div>
-      </div>
-      <div class="row">
-        <div class="item"></div>
-       <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-      </div> -->
+  <div class="general">
+    <div class="main-1">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
     </div>
+    <div class="main-2">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-3">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-4">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-5">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-6">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-7">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-8">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-9">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+    <div class="main-10">
+      <div class="wrapper-1"></div>
+      <div class="wrapper-2"></div>
+      <div class="wrapper-3"></div>
+      <div class="wrapper-4"></div>
+      <div class="wrapper-5"></div>
+      <div class="wrapper-6"></div>
+      <div class="wrapper-7"></div>
+      <div class="wrapper-8"></div>
+      <div class="wrapper-9"></div>
+      <div class="wrapper-10"></div>
+    </div>
+  </div>
 </body>
 </html>
