--- a/classwork/2020-11-12/index.html
+++ b/classwork/2020-11-12/index.html
@@ -8,19 +8,9 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <div class="main">
-    <div class="deck1">
-      <div class="card1"><p></p></div>
+    <div class="wrapper">
+       <div class="item">item1011</div>
+       <div class="item">item12</div>
     </div>
-    <div class="deck2">
-      <div class="card2"><p></p></div>
-    </div>
-    <div class="deck3">
-      <div class="card3"><p></p></div>
-    </div>
-    <div class="deck4">
-      <div class="card4"><p></p></div>
-    </div>
-  </div>
 </body>
 </html>
