--- a/homework/2020-11-12/index.html
+++ b/homework/2020-11-12/index.html
@@ -13,7 +13,7 @@
          <div class="logo"></div>
          <div class="nav">
            <div><a href="#About">About</a></div>
-           <div><a href="#SCSS">SCSS</a></div>
+           <div><a href="https://github.com/useran/useran.github.io/blob/master/homework/2020-11-12/styles/main.scss">SCSS</a></div>
          </div>
        </div>
        <div class="item">
