--- a/homework/2020-12-17/index.html
+++ b/homework/2020-12-17/index.html
@@ -8,16 +8,7 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <div class="main">
-    <input class = "input1" type="text">
-    <div class = "btn1">+</div>
-    <div class = "btn2">-</div>
-    <div class = "btn3">*</div>
-    <div class = "btn4">/</div>
-    <div class = "btn5">?</div>
-    <input class = "input2" type="text">
-    <div class="forth"></div>
-  </div>
+  <div class="main" id="mainer"></div>
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
