--- a/homework/2020-12-21/index.html
+++ b/homework/2020-12-21/index.html
@@ -14,7 +14,7 @@
   <div class="buttons">
     <input type = "button" class="btn-left" value="Left">
     <input type = "button" class="btn-right" value="Right">
-    <input type = "button" class="btn-light" value="Light">
+    <input type = "button" class="btn-light" value="Light Off">
   </div>
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
