--- a/classwork/2020-12-26/index.html
+++ b/classwork/2020-12-26/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
+    <span class="wrap"></span>
     <div id ='mainer' class="main"></div>
     <div class="buttons">
       <input type="button" class="btn btn-1" value="Up">
