--- a/classwork/2021-01-11/index.html
+++ b/classwork/2021-01-11/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <div class="wrapper">
-    <span class="wrap"></span>
-    <span class="wrap2">00:00:00.0</span>
-    <div id ='mainer' class="main"></div>
-    <div class="buttons">
-      <input type="button" class="btn btn-1" value="Up">
-      <input type="button" class="btn btn-2" value="Down">
-      <input type="button" class="btn btn-3" value="Left">
-      <input type="button" class="btn btn-4" value="Right">
+    <div class="main">
+      <div class="left-side">
+        <div class="info-block">Carcassonne</div>
+        <div class="cards"></div>
+        <div class="status-block"></div>
+        <input class="reset-btn" type="button" value="Reset">
+      </div>
+      <div class="right-side"></div>
     </div>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
